# ansible-role-carbon

./: .gitreview  .zuul.yaml  README.md  README.rst  requirements.txt  setup.cfg  tox.ini
defaults/: main.yaml
doc/source/: conf.py
meta/: main.yml
tasks/: config.yaml  install.yaml  main.yaml  pre.yaml  service.yaml
tasks/install/: git.yaml  pip.yaml
templates/etc/carbon/: carbon.conf
templates/etc/systemd/system/: carbon-cache.service
tests/: collect-logs.yaml
tests/playbooks/: run.yaml
vars/: Debian.yaml  RedHat.yaml  main.yaml
